mnistlistcell加载，gradle降级