@@ -1,17 +1,42 @@
 plugins {
 	id 'java'
+	id 'application'
 	id 'org.springframework.boot' version '3.4.0'
 	id 'io.spring.dependency-management' version '1.1.6'
+	id 'org.openjfx.javafxplugin' version '0.1.0' // 确保使用最新版本
+	id "name.remal.lombok" version "2.2.13"
+}
+
+ext {
+	javafxVersion = '23' // 请根据需要选择最新版本
 }
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 
+javafx {
+	version = "${javafxVersion}"
+	modules = [ 'javafx.controls', 'javafx.fxml' ]
+}
 java {
 	toolchain {
 		languageVersion = JavaLanguageVersion.of(23)
 	}
 }
+
+sourceSets {
+	main {
+		resources {
+			srcDirs = ['src/main/resources']
+		}
+	}
+	test {
+		resources {
+			srcDirs = ['src/test/resources']
+		}
+	}
+}
+
 
 configurations {
 	compileOnly {
@@ -21,19 +46,28 @@ configurations {
 
 repositories {
 	mavenCentral()
+	maven { url 'https://maven.openjfx.io' }
 }
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	compileOnly 'org.projectlombok:lombok'
+	implementation "org.openjfx:javafx-controls:${javafxVersion}"
+	implementation "org.openjfx:javafx-fxml:${javafxVersion}"
+	// 如果需要其他模块，可以继续添加，例如：
+	// implementation "org.openjfx:javafx-graphics:${javafxVersion}"
+	// implementation "org.openjfx:javafx-media:${javafxVersion}"
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
-	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+tasks.withType(JavaExec) {
+	// 设置模块路径，确保 JavaFX 库可以被找到
+	jvmArgs = ['--module-path', classpath.asPath, '--add-modules', 'javafx.controls,javafx.fxml']
 }
